Update the Text interpolation sample

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,10 +25,10 @@
       <div class="title-wrapper">
         <div class="container">
 
-          <img src="/assets/images/logo.png" class="pull-left logo" alt="The Will Will Web">
+          <img src="/assets/images/logo.png" class="pull-left logo" alt="ABow 的追劇生活">
 
           <div class="pull-left">
-            <h1><a href="http://blog.miniasp.com/">ABow 的追劇生活</a></h1>
+            <h1><a href="{{ url }}">{{ title }}</a></h1>
             <h3>記載著 ABow 追劇的點點滴滴</h3>
           </div>
 
@@ -141,7 +141,7 @@
               <div class="widget-content">
                 <div style="text-align: center">
                   <div id="calendarContainer">
-                    <table class="calendar" summary="" style=";border-collapse:collapse;">
+                    <table class="calendar" summary="" style="border-collapse:collapse;">
                       <tbody>
                         <tr>
                           <td><a href="#">&lt;&lt;</a>&nbsp;&nbsp;</td>
